# pg-ripple

./: .gitignore  .versions.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.http  README.md  RELEASE.md  ROADMAP.md  audit.toml  build.rs  deny.toml  docker-compose.yml  justfile  pg-tide-relay-fixes.md  pg_ripple.cdx.json  pg_ripple.control  regression.diffs  regression.out  sbom.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
benchmarks/: README.md  er_freshness.sh  er_magellan.sh  pagerank.sql  pagerank_scale.sh  pagerank_throughput_history.csv  pagerank_with_writes.sh  probabilistic_overhead.sql
blog/: allen-interval-relations.md  cdc-knowledge-graphs.md  datalog-inside-postgresql.md  dcterms-schema-foaf-bundles.md  federation-circuit-breaker.md  ivm-pg-trickle-integration.md  json-ld-reverse-mapping.md  owl-property-chain-axiom.md  pagerank.md  rule-library-federation.md  semantic-hub-trickle-relay.md  skos-knowledge-organization.md  temporal-graph-snapshots.md  uncertain-knowledge.md
docker/: Dockerfile.cnpg  README.md
docs/: GAP_ANALYSIS.md  IMPROVEMENT_PLAN.md  STYLE.md  book.toml  gucs.md
examples/: arrow_flight_export.sql  bidi_relay_setup.sql  cloudnativepg_cluster.yaml  pagerank_analysis.sql  test_all.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: confidence_loader.rs  pprl_bloom_encode.rs  rule_authoring_validate.rs  rule_library_ssrf.rs  skos_bundle.rs  temporal_query.rs
jena_report/: report.json
pg_ripple_http/: Cargo.toml  README.md  pg_ripple_http.cdx.json  sbom.json
pg_ripple_http/src/: arrow_encode.rs  common.rs  datalog.rs  main.rs  metrics.rs  spi_bridge.rs  stream.rs
pg_ripple_http/src/routing/: admin_handlers.rs  confidence_handlers.rs  conflict_handler.rs  datalog_admin.rs  datalog_handlers.rs  datalog_inference.rs  dp_handlers.rs  entity_resolution_handlers.rs  explain_handler.rs  federation_credential_handlers.rs  hypothetical_handler.rs  json_mapping_handlers.rs  middleware.rs  mod.rs  pagerank_handlers.rs  pprl_handlers.rs  proof_tree_handler.rs  rule_authoring_handler.rs  rule_explain_handler.rs  rule_library_handler.rs  sparql_handlers.rs  temporal_handlers.rs  tenant_handlers.rs
pg_ripple_http/src/routing/admin_handlers/: diagnostic.rs  explorer.rs  mod.rs
plans/: MIGRATION_PROCEDURE_TRICKLE_LABS.md  PLAN_OVERALL_ASSESSMENT-18.md  PLAN_OVERALL_ASSESSMENT_13.md  PLAN_OVERALL_ASSESSMENT_14.md  PLAN_OVERALL_ASSESSMENT_15.md  PLAN_OVERALL_ASSESSMENT_16.md  PLAN_OVERALL_ASSESSMENT_17.md  PLAN_OVERALL_ASSESSMENT_4.md  PLAN_PG_TIDE.md  REPORT_TRICKLE_LABS.md  documentation-2.md  expert-system.md  implementation_plan.md  pg_trickle_relay_integration.md  r2rml-incremental.md  r2rml-virtual.md  riverbank-recommendations.md  sparql12_tracking.md
results/: admin_api_v076.out  admin_functions.out  aggregates.out  ask_views.out  basic_crud.out  bsbm.out  bulk_load_strict.out  cache_stats.out  canary.out  cdc_subscriptions.out  change_notification.out  citus_aggregate_pushdown.out  citus_graph_affinity.out  citus_object_pruning.out  citus_service_pruning.out  citus_sharding.out  citus_url_parsing.out  concurrent_write_merge.out  construct_rules.out  construct_views.out  copy_rdf_path_allowlist.out  crash_recovery_merge.out  cwb_savepoint_rollback.out  cwb_write_path_equivalence.out  datalog_agg.out  datalog_antijoin.out  datalog_arithmetic.out  datalog_bounded_depth.out  datalog_builtin_functions.out  datalog_constraints.out  datalog_cost_reorder.out  datalog_custom.out  datalog_cwb_interaction.out  datalog_delta_index.out  datalog_demand.out  datalog_dred.out  datalog_dred_cycle.out  datalog_explain.out  datalog_filter_pushdown.out  datalog_incremental_rules.out  (+196 more)
roadmap/: v0.100.0.md  v0.101.0.md  v0.102.0.md  v0.103.0.md  v0.104.0.md  v0.105.0.md  v0.106.0.md  v0.107.0.md  v0.108.0.md  v0.109.0.md  v0.11.0-full.md  v0.110.0.md  v0.111.0.md  v0.112.0.md  v0.113.0-full.md  v0.113.0.md  v0.114.0-full.md  v0.114.0.md  v0.115.0-full.md  v0.115.0.md  v0.116.0-full.md  v0.116.0.md  v0.117.0-full.md  v0.117.0.md  v0.118.0-full.md  v0.118.0.md  v0.119.0-full.md  v0.119.0.md  v0.120.0-full.md  v0.120.0.md  v0.121.0.md  v0.122.0.md  v0.123.0.md  v0.124.0.md  v0.125.0.md  v0.126.0.md  v0.127.0.md  v0.128.0.md  v0.52.0.md  v0.54.0-full.md  (+30 more)
scripts/: add_q15_comments.py  check_dep_versions.sh  check_docs_examples.py  check_docs_links.py  check_docs_summary.py  check_guc_drift.py  check_http_routes.py  check_module_sizes.sh  check_no_unreachable_in_production.sh  check_security_definer_search_path.sh  check_sql_coverage.py  generate_sbom_diff.sh  magellan_to_rdf.py  pg-ripple-load  sql_allowlist.toml
sql/: INSTALL.md  pg_ripple--0.100.0--0.101.0.sql  pg_ripple--0.101.0--0.102.0.sql  pg_ripple--0.102.0--0.103.0.sql  pg_ripple--0.103.0--0.104.0.sql  pg_ripple--0.104.0--0.105.0.sql  pg_ripple--0.105.0--0.106.0.sql  pg_ripple--0.106.0--0.107.0.sql  pg_ripple--0.107.0--0.108.0.sql  pg_ripple--0.108.0--0.109.0.sql  pg_ripple--0.109.0--0.110.0.sql  pg_ripple--0.110.0--0.111.0.sql  pg_ripple--0.111.0--0.112.0.sql  pg_ripple--0.112.0--0.113.0.sql  pg_ripple--0.113.0--0.114.0.sql  pg_ripple--0.114.0--0.115.0.sql  pg_ripple--0.115.0--0.116.0.sql  pg_ripple--0.116.0--0.117.0.sql  pg_ripple--0.117.0--0.118.0.sql  pg_ripple--0.118.0--0.119.0.sql  pg_ripple--0.119.0--0.120.0.sql  pg_ripple--0.120.0--0.121.0.sql  pg_ripple--0.121.0--0.122.0.sql  pg_ripple--0.122.0--0.123.0.sql  pg_ripple--0.123.0--0.124.0.sql  pg_ripple--0.124.0--0.125.0.sql  pg_ripple--0.125.0--0.126.0.sql  pg_ripple--0.126.0--0.127.0.sql  pg_ripple--0.127.0--0.128.0.sql  pg_ripple--0.72.0--0.73.0.sql  pg_ripple--0.87.0--0.88.0.sql  pg_ripple--0.88.0--0.89.0.sql  pg_ripple--0.89.0--0.90.0.sql  pg_ripple--0.90.0--0.91.0.sql  pg_ripple--0.91.0--0.92.0.sql  pg_ripple--0.92.0--0.93.0.sql  pg_ripple--0.93.0--0.94.0.sql  pg_ripple--0.94.0--0.95.0.sql  pg_ripple--0.95.0--0.96.0.sql  pg_ripple--0.96.0--0.97.0.sql  (+5 more)
src/: bench.rs  bulk_load.rs  cdc.rs  cdc_bridge_api.rs  compat.rs  datalog_api.rs  entity_resolution.rs  er_monitoring.rs  error.rs  (+28 more)
(+447 files in other folders)
