[workspace]
members = [".", "pg_ripple_http"]

[package]
name = "pg_ripple"
version = "0.88.0"
edition = "2024"
description = "High-performance RDF triple store with native SPARQL query execution for PostgreSQL 18"
license = "Apache-2.0"
repository = "https://github.com/grove/pg-ripple"
rust-version = "1.88"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = { version = "=0.18.0", default-features = false }
spargebra = { version = "0.4", features = ["sparql-12"] }
sparopt = { version = "0.3", features = ["sparql-12"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
lru = "0.17"
chrono = { version = "0.4", default-features = false, features = ["std"] }
rio_api = "0.8"
rio_turtle = "0.8"
rio_xml = "0.8"
oxrdf = "0.3"
libc = "0.2"
unicode-normalization = "0.1"
ureq = { version = "2", features = ["tls"] }
parquet = { version = "58", default-features = false, features = ["snap"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
pgrx-tests = { version = "=0.18.0", default-features = false }
spargebra = "0.4"
sparopt = "0.3"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
crossbeam-channel = "0.5"
proptest = "1"
oxigraph = { version = "0.4", default-features = false }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "thin"
