[workspace]
members = [".", "pg_ripple_http"]

# SUPPLY-CHAIN-01 (v0.97.0, M15-16): serde_cbor audit.
# serde_cbor v0.11.2 is a TRANSITIVE dependency pulled in by pgrx 0.18.0.
# pg_ripple does not use serde_cbor directly.
# Action: tracked in deny.toml; no upgrade path until pgrx drops the dep.
# Run `cargo tree -i serde_cbor` to verify the dep chain.

[package]
name = "pg_ripple"
version = "0.128.0"
edition = "2024"
description = "High-performance RDF triple store with native SPARQL query execution for PostgreSQL 18"
license = "Apache-2.0"
repository = "https://github.com/trickle-labs/pg-ripple"
rust-version = "1.88"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
cshim = ["pgrx/cshim"]
pg_test = []

[dependencies]
pgrx = { version = "=0.18.0", default-features = false }
spargebra = { version = "0.4", features = ["sparql-12", "sep-0006"] }
sparopt = { version = "0.3", features = ["sparql-12", "sep-0006"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
lru = "0.18"
chrono = { version = "0.4", default-features = false, features = ["std"] }
rio_api = "0.8"
rio_turtle = "0.8"
rio_xml = "0.8"
oxrdf = "0.3"
libc = "0.2"
unicode-normalization = "0.1"
ureq = { version = "2", features = ["tls"] }
parquet = { version = "58", default-features = false, features = ["snap"] }
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"

[dev-dependencies]
pgrx-tests = { version = "=0.18.0", default-features = false }
spargebra = "0.4"
sparopt = "0.3"
postgres = { version = "0.19", features = ["with-serde_json-1"] }
crossbeam-channel = "0.5"
proptest = "1"
oxigraph = { version = "0.5", default-features = false, features = ["rdf-12"] }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "thin"

# ── PERF-03 (v0.90.0): workspace lint gate for unwrap/expect ─────────────────
# Warn on new .unwrap() and .expect() calls. Legitimate uses are suppressed
# per-callsite with #[allow(clippy::unwrap_used)] // CLIPPY-OK: <reason>
# ── H16-01 (v0.112.0): deny undocumented unsafe blocks ───────────────────────
# Every unsafe {} block must have a // SAFETY: comment immediately before it.
[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
undocumented_unsafe_blocks = "deny"
