[package]
name = "pg_ripple-fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
spargebra = { version = "0.4", features = ["sparql-12"] }
rio_turtle = "0.8"
rio_xml = "0.8"
rio_api = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
serde_json = "1"
url = "2"

[[bin]]
name = "federation_result"
path = "fuzz_targets/federation_result.rs"
test = false
doc = false

[[bin]]
name = "sparql_parser"
path = "fuzz_targets/sparql_parser.rs"
test = false
doc = false

[[bin]]
name = "turtle_parser"
path = "fuzz_targets/turtle_parser.rs"
test = false
doc = false

[[bin]]
name = "datalog_parser"
path = "fuzz_targets/datalog_parser.rs"
test = false
doc = false

[[bin]]
name = "shacl_parser"
path = "fuzz_targets/shacl_parser.rs"
test = false
doc = false

[[bin]]
name = "dictionary_hash"
path = "fuzz_targets/dictionary_hash.rs"
test = false
doc = false

# v0.53.0 — new fuzz targets
[[bin]]
name = "rdfxml_parser"
path = "fuzz_targets/rdfxml_parser.rs"
test = false
doc = false

[[bin]]
name = "jsonld_framer"
path = "fuzz_targets/jsonld_framer.rs"
test = false
doc = false

[[bin]]
name = "http_request"
path = "fuzz_targets/http_request.rs"
test = false
doc = false

# v0.60.0 A7-1 — new fuzz targets: GeoSPARQL WKT, R2RML, LLM prompt sanitizer
[[bin]]
name = "geosparql_wkt"
path = "fuzz_targets/geosparql_wkt.rs"
test = false
doc = false

[[bin]]
name = "r2rml_mapping"
path = "fuzz_targets/r2rml_mapping.rs"
test = false
doc = false

[[bin]]
name = "llm_prompt_builder"
path = "fuzz_targets/llm_prompt_builder.rs"
test = false
doc = false

[[bin]]
name = "sparql_update"
path = "fuzz_targets/sparql_update.rs"
test = false
doc = false


[[bin]]
name = "url_host_parser"
path = "fuzz_targets/url_host_parser.rs"
test = false
doc = false

# v0.83.0 FUZZ-BULK-01 — bulk-loader input fuzz targets
[[bin]]
name = "ntriples_load"
path = "fuzz_targets/ntriples_load.rs"
test = false
doc = false

[[bin]]
name = "nquads_load"
path = "fuzz_targets/nquads_load.rs"
test = false
doc = false

[[bin]]
name = "trig_load"
path = "fuzz_targets/trig_load.rs"
test = false
doc = false

# T13-03 (v0.86.0): CONSTRUCT writeback rule parser fuzz target.
[[bin]]
name = "construct_rule"
path = "fuzz_targets/construct_rule.rs"
test = false
doc = false

# T13-03 (v0.86.0): SHACL-SPARQL constraint parser fuzz target.
[[bin]]
name = "shacl_sparql"
path = "fuzz_targets/shacl_sparql.rs"
test = false
doc = false

# TEST-03 (v0.90.0): confidence loader adversarial float fuzz target.
[[bin]]
name = "confidence_loader"
path = "fuzz_targets/confidence_loader.rs"
test = false
doc = false

# M16-13 (v0.117.0): four new fuzz targets for temporal queries, PPRL Bloom
# encoding, rule authoring validation, and SKOS bundle loading.
[[bin]]
name = "temporal_query"
path = "fuzz_targets/temporal_query.rs"
test = false
doc = false

[[bin]]
name = "pprl_bloom_encode"
path = "fuzz_targets/pprl_bloom_encode.rs"
test = false
doc = false

[[bin]]
name = "rule_authoring_validate"
path = "fuzz_targets/rule_authoring_validate.rs"
test = false
doc = false

[[bin]]
name = "skos_bundle"
path = "fuzz_targets/skos_bundle.rs"
test = false
doc = false
