[package]
name = "pg_ripple_http"
version = "0.88.0"
edition = "2024"
description = "SPARQL 1.1 Protocol HTTP endpoint for pg_ripple"
license = "Apache-2.0"
repository = "https://github.com/grove/pg-ripple"
rust-version = "1.88"

[[bin]]
name = "pg_ripple_http"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "limit"] }
tower_governor = { version = "0.8", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
percent-encoding = "2"
serde_urlencoded = "0.7"
constant_time_eq = "0.4"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["rustls-tls-native-roots"], default-features = false }
tokio-stream = "0.1"
utoipa = { version = "5", features = ["axum_extras", "yaml"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
arrow = { version = "55.1", default-features = false, features = ["ipc"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dashmap = "6"
